--- a/index.html
+++ b/index.html
@@ -8,8 +8,38 @@
 	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 	<!--favicon icon-->
 	<link rel="Shortcut Icon" href="assets/images/favicon.ico">
+	<!--google Font-->
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;700&family=Heebo:wght@100;200;400;700&family=Playfair+Display:wght@400;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
+<!--Hero-section-->
+	<section class="hero-section">
+		<header class="header-area">
+			<div class="container">
+				<div class="logo-area">
+					<a href="index.html"><img src="assets/images/logo.png"></a>
+				</div>
+				<!--menu-sction-->
+				<div class="nav-menu">
+					<ul>
+						<li><a href="#">Home</li>
+						<li><a href="#">Adversites</li>
+						<li><a href="#">Supports</li>
+						<li><a href="#">Contact</li>
+						<li><a href="#">About Us</li>
+					</ul>
+				</div>
+				<!--Reg-sction-->
+				<div class="reg-section" >
+					<div class="reg-batton">
+					  <a href="#">Register Now</a>
+					</div>
+				</div>
+			</div>	
+		</header>
+	</section>
 
 </body>
 </html>
