update banner section

--- a/index.html
+++ b/index.html
@@ -37,9 +37,40 @@
 					  <a href="#">Register Now</a>
 					</div>
 				</div>
-			</div>	
+			</div>
+			<!--banner-sction-->
+			<section class="banner-area">
+				<div class="container">
+					<div class="banner_left_section">
+						<div class="text-area">
+							<h1>Great software is
+								built with amazing 
+								developers</h1>
+							<p>We help build and manage a team of world-class developers to bring your vision to life</p>
+						</div>
+						<div class="sub_form">
+							<div class="Subs-new-batton">
+					         	<a href="#">Subscribe newsletter</a>
+					       </div>
+							<div class="Subscribe-batton">
+					         	<a href="#">Subscribe</a>
+					       </div>
+						</div>
+						<div class="sponser_section">
+							<h4>Sponsored by:</h4>
+							<div class="sponser_img">
+								<img src="assets/images/image1.png">
+								<img src="assets/images/image2.png">
+								<img src="assets/images/image3.png">
+							</div>
+						</div>
+					</div>
+					<div class="banner_right_section">
+						<img src="assets/images/hero-img.png">	
+					</div>
+				</div>
+			</section>
 		</header>
 	</section>
-
 </body>
 </html>
