--- a/index.html
+++ b/index.html
@@ -73,5 +73,69 @@
 			<!--banner-sction end-->
 		</header>
 	</section>
+	<!--quality-features start-->
+	<section class="quality-features">
+		<div class="container">
+			<div class="quality-heading">
+				<h4>Quality features</h4>
+				<h1>Meet exciting feature of app</h1>
+			</div>
+			<div class="quality-single-contant">
+				<div class="quality-single">
+					<img src="assets/images/Frame.png">
+					<h2>Unlimited Customization</h2>
+					<p>Get your blood tests delivered at home collect a sample from the your blood tests.</p>
+				</div>
+				<div class="quality-single">
+					<img src="assets/images/Frame1.png">
+					<h2>Vector shape & resizable</h2>
+					<p>Get your blood tests delivered at home collect a sample from the your blood tests.</p>
+				</div>
+				<div class="quality-single">
+					<img src="assets/images/Frame2.png">
+					<h2>Editing freedom</h2>
+					<p>Get your blood tests delivered at home collect a sample from the your blood tests.</p>
+				</div>
+				<div class="quality-single">
+					<img src="assets/images/Frame3.png">
+					<h2>Best Award history</h2>
+					<p>Get your blood tests delivered at home collect a sample from the your blood tests.</p>
+				</div>
+			</div>
+		</div>
+	</section>
+	<!--quality-features end-->
+	<section class="agencies-section">
+		<div class="container">
+			<div class="agencies-left-part">
+				<img src="assets/images/img.png">
+			</div>
+			<div class="agencies-right-part">
+				<div class="agencies-right-heading">
+					<h1>Boost your agencies
+						by choosing Ninja
+						Developers</h1>
+					<p>Create custom landing pages with Shades that convert more visitors than any website, no coding required.</p>
+				</div>	
+				<div class="check-point">
+					<div class="check-point-single">
+						<img src="assets/images/check.png">
+						<p>Unlimited design possibility</p>
+					</div>
+					<div class="check-point-single">
+						<img src="assets/images/check.png">
+						<p>Completely responsive features</p>
+					</div>
+					<div class="check-point-single">
+						<img src="assets/images/check.png">
+						<p>Easy to customize plugins</p>
+					</div>
+				</div>
+				<div class="learn-button">
+					<a href="#">Learn more > </a>
+				</div>
+			</div>
+		</div>
+	</section>
 </body>
 </html>
