--- a/index.html
+++ b/index.html
@@ -137,5 +137,59 @@
 			</div>
 		</div>
 	</section>
+	<!--leading-companies-->
+	<section class="leading-companies">
+		<div class="container">
+			<div class="leading-companies-heading">
+				<h1>Leading companies trust us to develop software</h1>
+				<p>We believe it’s important for everyone to have access to software especially when it comes to digital learning be navigate.</p>
+			</div>
+			<div class="leading-button">
+				<a href="#">Explore Details > </a>
+			</div>
+			<div class="leading-companies-contant">
+				<img src="assets/images/video.png">
+			</div>
+		</div>
+	</section>
+	<!--customers-contant-->
+	<section class="customers-contant">
+		<div class="container">
+			<div class="customers-heading">
+				<h4>Customer Comments</h4>
+				<h1>Why customers love us</h1>
+				<p>They are doing amazing job with hundred percent customer satisfaction, Love their work and would like to work with them again</p>
+			</div>
+			<div class="customers-single-contant">
+				<div class="customers-single">
+					<div class="customers-person">
+						<img src="assets/images/person1.png">
+					</div>
+					<div class="customers-person-details">
+						<h2>Pierre Hackett</h2>
+						<p>VP of Engineering</p>
+					</div>
+				</div>
+				<div class="customers-single">
+					<div class="customers-person">
+						<img src="assets/images/person2.png">
+					</div>
+					<div class="customers-person-details">
+						<h2>Natalia Sanz</h2>
+						<p>Head of Technology</p>
+					</div>
+				</div>
+				<div class="customers-single">
+					<div class="customers-person">
+						<img src="assets/images/person3.png">
+					</div>
+					<div class="customers-person-details">
+						<h2>Ece Akman</h2>
+						<p>Senior Marketer</p>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
 </body>
 </html>
