--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
 				<!--menu-sction-->
 				<div class="nav-menu">
 					<ul>
-						<li><a href="#">Home</li>
-						<li><a href="#">Adversites</li>
-						<li><a href="#">Supports</li>
-						<li><a href="#">Contact</li>
-						<li><a href="#">About Us</li>
+						<li><a href="#">Home</a></li>
+						<li><a href="#">Adversites</a></li>
+						<li><a href="#">Supports</a></li>
+						<li><a href="#">Contact </a></li>
+						<li><a href="#">About Us</a></li>
 					</ul>
 				</div>
 				<!--Reg-sction-->
@@ -41,30 +41,22 @@
 			<!--banner-sction-->
 			<section class="banner-area">
 				<div class="container">
-					<div class="banner_left_section">
-						<div class="text-area">
-							<h1>Great software is
-								built with amazing 
-								developers</h1>
-							<p>We help build and manage a team of world-class developers to bring your vision to life</p>
-						</div>
-						<div class="sub_form">
-							<div class="Subs-new-batton">
-					         	<a href="#">Subscribe newsletter</a>
-					       </div>
-							<div class="Subscribe-batton">
-					         	<a href="#">Subscribe</a>
-					       </div>
-						</div>
-						<div class="sponser_section">
-							<h4>Sponsored by:</h4>
-							<div class="sponser_img">
-								<img src="assets/images/image1.png">
-								<img src="assets/images/image2.png">
-								<img src="assets/images/image3.png">
-							</div>
-						</div>
+					<div class="custom_area">
+						<h4>Great software is built with amazing developers</h4>
+						<p>We help build and manage a team of world-class developers to bring your vision to life</p>
+					<div class="custom_btn">
+						<input type="text" placeholder="Subscribe newsletter">
+						<input type="submit" value="Subscribe">
 					</div>
+					<div class="sponsor_logo">
+						<ul>
+							<li>Sponsored by:</li>
+							<li><a href="#"><img src="assets/images/image1.png" alt=""></a></li>
+							<li><a href="#"><img src="assets/images/image2.png" alt=""></a></li>
+							<li><a href="#"><img src="assets/images/image3.png" alt=""></a></li>
+						</ul>
+					</div>
+			   </div>
 					<div class="banner_right_section">
 						<img src="assets/images/hero-img.png">	
 					</div>
@@ -147,8 +139,11 @@
 			<div class="leading-button">
 				<a href="#">Explore Details > </a>
 			</div>
-			<div class="leading-companies-contant">
-				<img src="assets/images/video.png">
+			<div class="video_area">
+				<video controls poster="assets/video/poster.png">
+					<source src="assets/video/video.mp4" type="video/mp4">
+					<source src="assets/video/video.ogg" type="video/ogg">
+				</video>
 			</div>
 		</div>
 	</section>
@@ -191,5 +186,58 @@
 			</div>
 		</div>
 	</section>
+		<!--Start Customer support Section-->
+	<section class="customer_support">
+		<div class="container">
+			<!-- support content -->
+			<div class="customer_support_content">
+				<div class="support_content">
+					<h2>Free Customer Support to ensure what you like to expect</h2>
+					<p>We offer a risk-free trial period of up to two weeks. You will only have to pay if you are happy with the developer and wish to continue. If you are unsatisfied, we’ll refund payment or fix issues on our dime period customers.</p>
+					<div class="learn_content">
+						<p>If you are happy with the developer and wish to continue. If you are unsatisfied, we’ll refund payment or fix issues.</p>
+						<a href="#">Learn more > </a>
+					</div>
+				</div>
+				<!-- support image -->
+				<div class="support_image">
+					<img src="assets/images/support.png" alt="Review Photo">
+				</div>
+				
+			</div>
+		</div>
+	</section>
+	<!--End Customer support Section-->
+	<!-- Start Tutorials_Features  -->
+	<section class="tutoials_features">
+		<div class="container">
+			<!-- Start Tutorials Content Area -->
+			<div class="tutorials_content_area">
+				<div class="tutorials_content">
+					<h4>Quality features</h4>
+					<h2>Tutorials that people love most</h2>
+				</div>
+				<div class="box_feature_area">
+					<div class="single_box_feature">
+						<img src="assets/images/tutorials_features/1.png" alt="">
+						<h3>How to work with prototype design with adobe xd featuring tools</h3>
+						<p><img src="assets/images/tutorials_features/comments.png" alt="">22 Comments</p>
+					</div>
+					<div class="single_box_feature">
+						<img src="assets/images/tutorials_features/2.png" alt="">
+						<h3>Create multiple artboard by using figma prototyping development</h3>
+						<p><img src="assets/images/tutorials_features/comments.png" alt="">15 Comments</p>
+					</div>
+					<div class="single_box_feature">
+						<img src="assets/images/tutorials_features/3.png" alt="">
+						<h3>Convert your web layout theming easily with sketch zeplin extension</h3>
+						<p><img src="assets/images/tutorials_features/comments.png" alt="">18 Comments</p>
+					</div>
+				</div>
+			</div>
+			<!-- End Tutorials Content Area -->
+		</div>
+	</section>
+	<!-- Start Tutorials_Features Section -->
 </body>
 </html>
