--- a/index.html
+++ b/index.html
@@ -238,6 +238,41 @@
 			<!-- End Tutorials Content Area -->
 		</div>
 	</section>
-	<!-- Start Tutorials_Features Section -->
+	<!-- EndTutorials_Features Section -->
+	<!--developer-section Section -->
+	<section class="developer-section">
+		<div class="container">
+			<div class="dev-contant">
+				<div class="dev-contant-left">
+					<h1>Hire the world’s best developers 
+					and designers around!</h1>
+				</div>
+				<div class="dev-contant-right">
+					<img src="assets/images/group.png">
+					<div class="dev-button">
+						<a href="#">HIRE DEVELOPERS</a>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
+	<footer class="footer-section">
+		<div class="container">
+			<div class="footer-left">
+				<a href="#"><img src="assets/images/footer-logo.png"></a>
+				<p>Copyright by 2019 Dev, Inc</p>
+			</div>
+			<div class="footer-right">
+				<ul>
+					<li><a href="#">Home</a></li>
+					<li><a href="#">Adversites</a></li>
+					<li><a href="#">Supports</a></li>
+					<li><a href="#">Marketing</a></li>
+					<li><a href="#">FAQ</a></li>
+				</ul>
+			</div>
+		</div>
+	</footer>
 </body>
 </html>
+      
