--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
 			</div>
 			<div class="video_area">
 				<video controls poster="assets/video/poster.png">
-					<source src="assets/video/video.mp4" type="video/mp4">
+					<source src="assets/video/video1.mp4" type="video/mp4">
 					<source src="assets/video/video.ogg" type="video/ogg">
 				</video>
 			</div>
